alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ width: 100%;
 .left > img {
   /* width: 150px;
   height: 100px; */
-  align-items: start;
+  /* align-items: start; */
   /* margin-left: 80px; */
   
 
